Use some new jdk features